--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .topnav {
-  background-color: rgb(165, 160, 160);}
+  background-color: rgb(0, 0, 0);}
 
 
 .topnav ul{
@@ -12,7 +12,6 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-
 }
 .topnav li{
     list-style-type: none;
@@ -25,12 +24,14 @@
 }
 
 .topnav a:hover {
-  background-color: rgb(189, 237, 116);
-  color: black;
+  color: rgb(237, 211, 116);
+  
 
 }
 
 .topnav a.active {
-  background-color: #2124ec;
-  color: white;
+  background-color: rgb(255, 202, 10);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+  border-style: double;
 }
