--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,34 @@
   border-radius: 10px;
   border-style: double;
 }
+
+footer/*footer style*/
+{
+	background-color: rgb(0, 0, 0);
+	height: 150px;
+}
+footer ul/*footer ul style*/
+{
+	text-align: center;
+	line-height: 150px;
+}
+footer ul li/*foote list style*/
+{
+	list-style-type: none;
+	display: inline-block;
+}
+footer ul li a/*footer ancor tag style*/
+{
+	text-decoration: none;
+	padding-right: 25px;
+	color: rgb(255, 255, 255);
+	letter-spacing: 2px;
+	font-size: 20px;
+}
+footer a:hover {
+    color: rgb(237, 211, 116);
+}
+
+footer section p{
+ border: yellow;
+}
