css adding copyright

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,19 @@
+body {
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+}
+
+div {
+    width: 100vw;
+    height: 100vh;
+}
 .topnav {
-  background-color: rgb(0, 0, 0);}
+  background-color: rgb(0, 0, 0);
+  margin-top: -20px;
 
-
+}
+  
 .topnav ul{
   text-align: center;
 }
@@ -12,11 +24,14 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+
 }
 .topnav li{
     list-style-type: none;
 	display: inline-block;
 	padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	font-weight: bold;
@@ -32,37 +47,61 @@
 .topnav a.active {
   background-color: rgb(255, 202, 10);
   color: rgb(0, 0, 0);
-  border-radius: 10px;
-  border-style: double;
+  border-radius: 10px;/*curve of the borde */
+  border-style: double
 }
 
 footer/*footer style*/
 {
 	background-color: rgb(0, 0, 0);
 	height: 150px;
+
 }
-footer ul/*footer ul style*/
+.footnav ul/*footer ul style*/
 {
 	text-align: center;
 	line-height: 150px;
 }
-footer ul li/*foote list style*/
+.footnav ul li/*foote list style*/
 {
 	list-style-type: none;
 	display: inline-block;
 }
-footer ul li a/*footer ancor tag style*/
+.footnav ul li a/*footer ancor tag style*/
 {
-	text-decoration: none;
+	
+    text-decoration-line: underline;
 	padding-right: 25px;
 	color: rgb(255, 255, 255);
-	letter-spacing: 2px;
-	font-size: 20px;
+	letter-spacing: 3px;
+	font-size: 21px;
 }
-footer a:hover {
+.footnav a:hover {
     color: rgb(237, 211, 116);
 }
+.copyright{
+    color: rgb(237, 211, 116);
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    letter-spacing: 3px;
+    font-size: 15px;
+    margin-top: -20px;
 
-footer section p{
- border: yellow;
+}
+
+.logo {
+    float: left;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-top: 10px;
+    transition: 0.6s ease;
+
+}
+.logo:hover{
+    opacity: 0.5;
+}
+.para1 {
+    text-align: right;
+    background-color: burlywood;
+    color: red;
 }
