--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,7 @@ body {
     margin: 0%;
     width: 100%;
     height: 100%;
-}
-
-div {
-    width: 100vw;
-    height: 100vh;
+    bottom: 0%;
 }
 .topnav {
   background-color: rgb(0, 0, 0);
@@ -86,6 +82,7 @@ footer/*footer style*/
     letter-spacing: 3px;
     font-size: 15px;
     margin-top: -20px;
+    padding-bottom: 10px;
 
 }
 
