--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0%;
     width: 100%;
@@ -44,7 +45,9 @@ body {
   border-radius: 10px;/*curve of the borde */
   border-style: double
 }
-
+.mobilenav{
+    display: none;
+}
 footer/*footer style*/
 {
 	background-color: rgb(0, 0, 0);
@@ -52,16 +55,17 @@ footer/*footer style*/
 }
 .footnav{
     text-align: right;
-    align-content: right;
     margin-top: 10px;
-    margin-right: 5em;
+    margin-right: 85px;
+    margin-bottom: 30px;
 }
-.footnav h2{
+footer h2{
     color: #fdfdfd;
     text-align: right;
     font-weight: bold;
     font-size: 20px;
     text-decoration-line: underline;
+    margin-right: 85px;
 }
 .footnav ul/*footer ul style*/
 {
@@ -81,7 +85,7 @@ footer/*footer style*/
     text-decoration-line: none;
 	color: rgb(255, 255, 255);
 	letter-spacing: 1px;
-	font-size: 20px;
+	font-size: 15px;
 }
 .footnav a:hover {
     color: rgb(237, 211, 116);
@@ -94,6 +98,8 @@ footer/*footer style*/
     font-size: 15px;
     margin-top: -20px;
     padding-bottom: 10px;
+    align-content: center;
+    
 
 }
 .logo1 img{
@@ -143,4 +149,7 @@ footer/*footer style*/
 .social img:hover {
         transform: scale(1.5);
         
-      }
+}
+.dropdown{
+    display: none;
+}
