--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,46 +1,20 @@
-.hamburger div{
-    width: 30px;
-    height: 10px;
-    margin: 5px;
-    background-color: rgb(81, 255, 0);
-    border-radius: 2px;
-}
-.topnav ul{
-    display: none;
-}
 body {
     margin: 0%;
     width: 100%;
     height: 100%;
 }
 
-footer/*footer style*/
+.footernavbar/*footer style*/
 {
 	background-color: rgb(0, 0, 0);
 	
-
 }
-.footnav ul li/*footer ul style*/
-{
-	text-align: right;
-	
+.footnav{
+    text-align: center;
+    margin-top: 110px;
 }
-.footnav ul li/*foote list style*/
-{
-	list-style-type: none;/*to remove bullets*/
-	display: contents;
-}
-.footnav ul li a/*footer ancor tag style*/
-{
-	
-    text-decoration-line: inherit;
-	padding-right: 1em;
-	color: rgb(255, 255, 255);
-	letter-spacing: 1px;
-	font-size: 20px;
-}
-.footnav a:hover {
-    color: rgb(237, 211, 116);
+footer h2{
+    display: none;
 }
 .copyright{
     color: rgb(237, 211, 116);
@@ -48,25 +22,31 @@ footer/*footer style*/
     background-color: rgb(0, 0, 0);
     letter-spacing: 3px;
     font-size: 15px;
-    margin-top: -20px;
     padding-bottom: 10px;
+    padding-top: 15px;
+    border-top-style: solid;
+    border-color: rgb(79, 79, 79);
+    
 
 }
 .logo1 img{
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
+    padding-left: 15px;
+    position: fixed;
+    display: block;
 }
 .logo2 img{
-    height: 50px;
-    width: 50px;
+    height: 120px;
+    width: 120px;
 }
-.logo1, .logo2 {
+.logo2 {
     float: left;
-    padding-bottom: 10px;
-    padding-left: 2em;
+    padding-left: 15px;
     padding-right: 2em;
     padding-top: 10px;
     transition: 0.6s ease;
+    background-color: rgb(0, 0, 0);
    
 
 }
@@ -78,4 +58,130 @@ footer/*footer style*/
     text-align: right;
     background-color: burlywood;
     color: red;
+}
+.social img{
+  list-style-type: none;
+  
+  font-size: 20px;
+  width: 40px;
+  margin-top: 50px;
+  padding-right: 30px;
+  float: right;
+  transition: 0.6s ease;
+  background-color: rgb(0, 0, 0);
+  margin-right: 15px;
+  position: static;
+  
+  
+   
+}
+.footnav{
+    text-align: center;
+    padding: 30px;
+    margin-bottom: 30px;
+}
+.footnav ul li/*foote list style*/
+{
+	list-style-type: none;
+	display: inline-block;
+	padding-right: 1em;
+    padding-top: 10px;
+    padding-bottom: 10px;
+	
+	color: rgb(255, 255, 255);
+	font-weight: bold;
+	font-size: 10px;
+
+}
+.footnav ul li a/*footer ancor tag style*/
+{
+	
+    text-decoration-style: initial;
+	color: rgb(255, 255, 255);
+	letter-spacing: 1px;
+	font-size: 20px;
+    padding: 10px;
+}
+.topnav ul{
+    display: none;
+}
+
+.burger {
+    z-index: 100;
+    position: fixed;
+    right: 25px;
+    display: block;
+    top: 25px;
+    cursor: pointer;
+}
+  
+.burger div {
+    width: 45px;
+    height: 5px;
+    background-color: rgb(255, 255, 255);
+    margin: 12px;
+    border-radius: 10px;
+}
+  .burger:hover{
+    color: rgb(252, 204, 13);
+}
+  
+.topnav{
+      background-color: black;
+      padding: 10px;
+      height: 75px;
+      overflow: hidden;/* to make the nav bar stay while*/
+      position: fixed;
+      top: 0;
+      width: 100%;
+    
+}
+#checkbox_toggle{
+    display: none;
+}
+.dropdown ul{
+    display: none;
+    
+}
+#checkbox_toggle:checked ~ ul {
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    list-style-type: none;
+    display: contents;
+    font-weight: bold;
+    font-size: 20px;
+    display:block;
+    
+
+    
+}  
+
+#checkbox_toggle:checked ~ ul li {
+    border: 1px;
+    border-color:  rgb(255, 255, 255);
+    border-style: double;
+    height: 2.5em;
+    background-color: rgb(0, 0, 0);
+    width: 500px;
+    color: rgb(255, 255, 255);
+    display: inline-block;
+    float: right;
+    right: 0;
+    align-content: center;
+}
+.dropdown{
+    display: block;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    margin-top: 55px;
+    
+}
+#checkbox_toggle:checked ~ ul li {
+    text-decoration: none;
+}
+#checkbox_toggle:checked ~ ul li:hover{
+    color: rgb(237, 211, 116);
+
 }
