--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,7 +32,8 @@ footer h2{
 .logo1 img{
     height: 70px;
     width: 70px;
-    padding-left: 15px;
+    padding-left: 20px;
+    margin-top: 10px;
     position: fixed;
     display: block;
 }
@@ -42,7 +43,7 @@ footer h2{
 }
 .logo2 {
     float: left;
-    padding-left: 15px;
+    padding-left: 20px;
     padding-right: 2em;
     padding-top: 10px;
     transition: 0.6s ease;
@@ -87,7 +88,6 @@ footer h2{
 	padding-right: 1em;
     padding-top: 10px;
     padding-bottom: 10px;
-	
 	color: rgb(255, 255, 255);
 	font-weight: bold;
 	font-size: 10px;
@@ -118,12 +118,9 @@ footer h2{
 .burger div {
     width: 45px;
     height: 5px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(237, 211, 116);
     margin: 12px;
     border-radius: 10px;
-}
-  .burger:hover{
-    color: rgb(252, 204, 13);
 }
   
 .topnav{
@@ -134,6 +131,7 @@ footer h2{
       position: fixed;
       top: 0;
       width: 100%;
+      margin-bottom: 90px;
     
 }
 #checkbox_toggle{
@@ -144,15 +142,14 @@ footer h2{
     
 }
 #checkbox_toggle:checked ~ ul {
-    text-align: center;
     text-decoration: none;
-    font-size: 17px;
     list-style-type: none;
     display: contents;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     display:block;
-    
+    border-radius: 2px;
+    margin-top: 0;
 
     
 }  
@@ -161,27 +158,36 @@ footer h2{
     border: 1px;
     border-color:  rgb(255, 255, 255);
     border-style: double;
-    height: 2.5em;
+    height: 2em;
     background-color: rgb(0, 0, 0);
-    width: 500px;
+    width: 400px;
     color: rgb(255, 255, 255);
-    display: inline-block;
+    display: block;
     float: right;
     right: 0;
-    align-content: center;
+    align-content: right;
+    text-align: right;
+    padding-top: 15px;
+    padding-right: 15px;
+    
+
 }
 .dropdown{
     display: block;
     justify-content: space-around;
     align-items: center;
     position: fixed;
-    margin-top: 55px;
+    margin-top: 0;
     
 }
-#checkbox_toggle:checked ~ ul li {
+.dropdown > ul li a {
     text-decoration: none;
+    color: rgb(255, 255, 255);
+    display:block;
 }
-#checkbox_toggle:checked ~ ul li:hover{
+#checkbox_toggle:checked ~ ul li a:hover{
     color: rgb(237, 211, 116);
-
+}
+.container1{
+    margin-top: 100px;
 }
