--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ body {
 .topnav a.active {
   background-color: rgb(255, 202, 10);
   color: rgb(0, 0, 0);
-  border-radius: 10px;/*curve of the borde */
+  border-radius: 10px;/*curve of the border */
   border-style: double
 }
 .mobilenav{
@@ -151,43 +151,27 @@ footer h2{
 .container1{
     margin-top: -20px;
 }
-
-.content{
-    padding : 25px;
-    border: #000;
-    border-style: solid;
-    background-color: rgb(0, 0, 0); 
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.432) , rgb(0, 0, 0));
-}
-
-
-
-h2{
+.intro h2{
 	color: rgb(255, 255, 255);
 	margin: 20px;
 	font-size: 55px;
 }
-h3{
+.intro h3{
 	color: rgb(237, 211, 116);
 	font-size: 25px;
 	margin-bottom: 50px;
     margin-left: 25px;
 }
-h4{
+.intro h4{
     text-align: center;
     margin-top: 10px;
 	letter-spacing: 2px;
 	font-size: 20px;
     margin-left: 20px;
+    padding-top: 40px;
     color: rgb(255, 217, 0);
 }
-.face{
-	top: 100px;
-	right:8%;
-}
-.face img{
-    height: 300px;
-}
+
 
 .intro{
 	width: 100%;
@@ -202,30 +186,40 @@ h4{
 	width: 550px;
 }
 .main{
-	width: 1130px;
+	
 	max-width: 95%;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
 }
-.intro-text h2{
-	color: white;
-	font-size: 75px;
-	text-transform: capitalize;
-	margin-bottom: 20px;
+
+
+.links {
+    text-align: center;
+    background-color: #6c6c6c;
+    border: #000000;
+    border-style: double;
+    
 }
-.intro-text h5{
-	color: white;
-	letter-spacing: 2px;
-	font-size: 22px;
-	margin-bottom: 25px;
-	text-transform: capitalize;
+.links button{
+    background-color: rgb(255, 255, 255);
+    font-size: 25px;
+    padding: 10px;
+    
 }
-.intro-text p{
-	color: #fcfc;
-	letter-spacing: 1px;
-	line-height: 28px;
-	font-size: 18px;
-	margin-bottom: 45px;
+button{
+    color: #f2f2f2;
+    text-align: center;
+    font-size: 20px;
+    margin: 30px;
+    border-radius: 35px;
+    width: 15%;
+}
+.links button a{
+    color: #000000;
+}
+.links button a:hover{
+    color: rgb(255, 217, 0);
+    transform: scaleX(1.2);
 }
