--- a/css/mobile.css
+++ b/css/mobile.css
@@ -55,11 +55,6 @@ footer h2{
     opacity: 0.5;
 
 }
-.para1 {
-    text-align: right;
-    background-color: burlywood;
-    color: red;
-}
 .social img{
   list-style-type: none;
   
@@ -160,7 +155,7 @@ footer h2{
     border-style: double;
     height: 2em;
     background-color: rgb(0, 0, 0);
-    width: 400px;
+    width: 380px;
     color: rgb(255, 255, 255);
     display: block;
     float: right;
@@ -190,4 +185,73 @@ footer h2{
 }
 .container1{
     margin-top: 100px;
+}
+ 
+/* index page*/
+.intro h2{
+	color: rgb(255, 255, 255);
+	margin: 20px;
+	font-size: 40px;
+}
+.intro h3{
+	color: rgb(237, 211, 116);
+	font-size: 25px;
+	margin-bottom: 50px;
+    margin-left: 25px;
+}
+.intro h4{
+    text-align: left;
+    margin-top: 10px;
+	letter-spacing: 2px;
+	font-size: 20px;
+    margin-left: 20px;
+    color: rgb(255, 217, 0);
+}
+
+.intro{
+	width: 100%;
+	background-color: #191919;
+    padding-bottom: 20px;
+}
+.intro img{
+	height: auto;
+	width: 200px;
+    margin-left: 25px;
+
+
+}
+.main{
+	
+	max-width: 80%;
+	margin: 5px
+	
+}
+
+.links {
+    text-align: center;
+    background-color: #6c6c6c;
+    border: #000000;
+    border-style: double;
+    
+}
+.links button{
+    background-color: rgb(255, 255, 255);
+    font-size: 15px;
+    padding: 10px;
+    
+}
+button{
+    color: #ffffff;
+    text-align: center;
+    font-size: 15px;
+    margin: 20px;
+    border-radius: 15px;
+    width: auto;
+}
+.links button a{
+    color: #000000;
+}
+.links button:hover{
+    
+    transform: scale(1.2);
 }
