--- a/css/main.css
+++ b/css/main.css
@@ -147,51 +147,48 @@ footer h2{
 }
 .dropdown{
     display: none;
+
 }
-.container1{
-    margin-top: -20px;
-}
+/*index page style*/
 .intro h2{
 	color: rgb(255, 255, 255);
-	margin: 20px;
+	padding: 20px;
 	font-size: 55px;
 }
 .intro h3{
 	color: rgb(237, 211, 116);
-	font-size: 25px;
-	margin-bottom: 50px;
-    margin-left: 25px;
+	font-size: 30px;
+	padding-bottom: 50px;
+    padding-left: 25px;
 }
 .intro h4{
     text-align: center;
     margin-top: 10px;
 	letter-spacing: 2px;
 	font-size: 20px;
-    margin-left: 20px;
+    padding-left: 20px;
     padding-top: 40px;
     color: rgb(255, 217, 0);
 }
 
-
 .intro{
 	width: 100%;
-	padding: 100px 0px;
 	background-color: #191919;
+
 }
 .intro img{
 	height: auto;
-	width: 300px;
-}
-.intro-text{
-	width: 550px;
+	width: 200px;
+    padding: 20px;
+    
 }
 .main{
 	
-	max-width: 95%;
-	margin: 0 auto;
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content:space-around ;
+
+    
 }
 
 
@@ -200,26 +197,69 @@ footer h2{
     background-color: #6c6c6c;
     border: #000000;
     border-style: double;
+    border-width: 20px;
+    
     
 }
 .links button{
-    background-color: rgb(255, 255, 255);
-    font-size: 25px;
+    background-color: rgb(255, 217, 0);
     padding: 10px;
-    
-}
-button{
-    color: #f2f2f2;
+
     text-align: center;
     font-size: 20px;
     margin: 30px;
     border-radius: 35px;
-    width: 15%;
+    width: 7em;
 }
 .links button a{
     color: #000000;
+    padding: 5px;
+    
 }
-.links button a:hover{
+.links button:hover{
+    transform: scale(1.2);
+    background-color: #f2f2f2;
+}
+
+/*contact css*/
+
+.content{
+    align-content: center;
+    background-color: #6c6c6c;
+    padding: 50px;
+    margin-top: -18px;
+
+}
+.content h1{
+    font-size: 50px;
     color: rgb(255, 217, 0);
-    transform: scaleX(1.2);
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+}
+.content h3{
+    font-size: 30px;
+    color: rgb(201, 201, 201);
+    text-align: center;
+    padding-bottom: 20px;
+}
+.socialmedia{
+    background-color: rgb(255, 217, 0);
+    border: rgb(255, 217, 0);
+    border-style: double;
+    border-radius: 25px;
+    padding: 10px;
+    color: aqua;
+}
+.socialmedia h2{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000000;
+
+
+}
+.social1{
+    background-color: #000000;
+    padding: 25px;
 }
