--- a/css/main.css
+++ b/css/main.css
@@ -204,22 +204,21 @@ footer h2{
 .links button{
     background-color: rgb(255, 217, 0);
     padding: 10px;
-
     text-align: center;
     font-size: 20px;
     margin: 30px;
     border-radius: 35px;
     width: 7em;
-}
-.links button a{
-    color: #000000;
-    padding: 5px;
     
 }
 .links button:hover{
     transform: scale(1.2);
     background-color: #f2f2f2;
+    color: #000000;
 }
+.container1{
+    margin-top: -18px;
+    }
 
 /*contact css*/
 
@@ -227,7 +226,6 @@ footer h2{
     align-content: center;
     background-color: #6c6c6c;
     padding: 50px;
-    margin-top: -18px;
 
 }
 .content h1{
@@ -236,6 +234,7 @@ footer h2{
     font-weight: bold;
     text-align: center;
     padding: 20px;
+    letter-spacing: 2px;
 }
 .content h3{
     font-size: 30px;
@@ -262,4 +261,87 @@ footer h2{
 .social1{
     background-color: #000000;
     padding: 25px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.social2 {
+    display: flex;
+    border-style: double;
+    background-color: #474747;
+
+  }
+  
+.column1 {
+    flex: 50%;
+    padding: 30px;
+    height: 200px;
+    margin: 30px;
+    background-color: #8a8787;
+    border-radius: 10px;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+
+}
+.column2 {
+    flex: 50%;
+    padding: 30px;
+    height: 200px;
+    margin: 30px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    margin-left: -150px;
+    margin-top: 180px;
+
+}
+
+/*portfolio page*/
+
+.faceimg img{
+    width: 200px;
+    height: auto;
+    float: right;
+    border: #000000;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 3px;
+    background-color: #000000
+}
+.faceimg{
+    margin: 10px;
+    margin-top: -250px;
+    padding-right: 20px;
+    
+}
+.content2{
+    padding-top: 300px;
+    background-color: #000000;
+
+}
+/*blog page*/
+.contents {
+    display: flex;
+    border-style: double;
+    background-color: #959393;
+
+  }
+  
+.content3 {
+    flex: 80%;
+    padding: 30px;
+    height: 200px;
+    margin: 30px;
+    background-color: #8a8787;
+    border-radius: 10px;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+}
+content4{
+    flex: 20%;
+    background-color: aqua;
+    height: 100%;
 }
