--- a/css/mobile.css
+++ b/css/mobile.css
@@ -237,13 +237,11 @@ footer h2{
     margin: 20px;
     border-radius: 15px;
     width: 7em;
-}
-.links button a{
     color: #000000;
-    padding: 5px;
     
 }
 .links button:hover{
     transform: scale(1.2);
     background-color: #f2f2f2;
+    color: #000000;
 }
