--- a/css/mobile.css
+++ b/css/mobile.css
@@ -245,3 +245,112 @@ footer h2{
     background-color: #f2f2f2;
     color: #000000;
 }
+/* blog page*/
+.contents {
+    display: flex;
+    border-style: double;
+    background-color: #959393;
+
+  }
+  
+.content3 {
+    flex: 80%;
+    padding: 30px;
+    height: 100%;
+    margin: 30px;
+    background-color: #8a8787;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-top: #000000;
+}
+.content4{
+    display: none;
+}
+
+.column3{
+    border: #a3a3a3;
+    border-width: 3px;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 30px;
+    border-style: solid;
+    background-color: #9c9c9c;
+    text-align: center;
+
+
+}
+.column3 h2{
+    font-weight: bold;
+    color: rgb(111, 78, 1);
+    font-size: 40px;
+
+}
+.column3 h3{
+    font-weight: lighter;
+    color: rgb(0, 57, 113);
+    font-size: 20px;
+    margin-top: -10px;
+    
+
+}
+.column3 h4{
+    font-weight: lighter;
+    color: rgb(255, 0, 0);
+    font-size: 20px;
+    margin-top: -10px;
+    
+
+}
+.column3 p{
+    
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    text-align: justify;
+    
+}
+.column5{
+    padding: 10px;
+    height: max-content;
+}
+.content3 img{
+    height: auto;
+    width: 200px;
+    align-items: center;
+}
+.column5 h2{
+    font-size: 30px;
+    font-weight: bold;
+    color: #0008ff;
+    text-align: center;
+    padding: 10px;
+
+}
+.column5 h1{
+    font-size: 40px;
+    font-weight: bold;
+    color: #000000;
+    margin-bottom: 20px;
+    text-align: center;
+    text-decoration: underline;
+   
+
+}
+.column5 li{
+    list-style: none;
+}
+
+/*header txt*/
+.content{
+    align-content: center;
+    background-color: #6c6c6c;
+    padding: 30px;
+
+}
+.content h1{
+    font-size: 30px;
+    color: rgb(255, 217, 0);
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+    letter-spacing: 2px;
+]
