--- a/css/mobile.css
+++ b/css/mobile.css
@@ -353,4 +353,98 @@ footer h2{
     text-align: center;
     padding: 20px;
     letter-spacing: 2px;
-]
+}
+
+/* contact page*/
+
+.content{
+    align-content: center;
+    background-color: #6c6c6c;
+    padding: 50px;
+
+}
+.content h1{
+    font-size: 50px;
+    color: rgb(255, 217, 0);
+    font-weight: bold;
+    text-align: center;
+    padding: 20px;
+    letter-spacing: 2px;
+}
+.content h3{
+    font-size: 30px;
+    color: rgb(201, 201, 201);
+    text-align: center;
+    padding-bottom: 20px;
+}
+.socialmedia{
+    background-color: rgb(255, 217, 0);
+    border: rgb(255, 217, 0);
+    border-style: double;
+    border-radius: 25px;
+    padding: 10px;
+}
+.socialmedia h2{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000000;
+
+
+}
+.social1{
+    background-color: #000000;
+    padding: 25px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.social2 {
+   
+    border-style: double;
+    background-color: #474747;
+
+  }
+  
+.column1 {
+    padding: 30px;
+    height: 200px;
+    margin: 30px;
+    background-color: #000000;
+    border-radius: 10px;
+    border-width: 4px;
+    border-color: rgb(255, 255, 255);
+    border-style: solid;
+    text-align: center;
+
+    
+
+}
+.column1 h2{
+    color: rgb(255, 255, 255);
+}
+.column2 {
+    padding: 30px;
+    height: 200px;
+    margin: 30px;
+    background-color: #000000;
+    border-radius: 10px;
+    border-width: 4px;
+    border-color: rgb(255, 213, 0);
+    border-style: solid;
+    text-align: center;
+
+}
+.column2 h2{
+    color: rgb(255, 213, 0);
+}
+.media img {
+list-style-type: none;
+font-size: 20px;
+width: 40px;
+margin-top: 50px;
+background-color: rgb(0, 0, 0);
+padding-left: 20px;
+}
+.media img:hover {
+    transform: scale(1.3);
+}
