--- a/css/main.css
+++ b/css/main.css
@@ -276,28 +276,46 @@ footer h2{
     padding: 30px;
     height: 200px;
     margin: 30px;
-    background-color: #8a8787;
+    background-color: #000000;
     border-radius: 10px;
     border-width: 4px;
-    border-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
     border-style: solid;
+    
 
+}
+.column1 h2{
+    color: rgb(255, 255, 255);
 }
 .column2 {
     flex: 50%;
     padding: 30px;
     height: 200px;
     margin: 30px;
-    background-color: #ffffff;
+    background-color: #000000;
     border-radius: 10px;
     border-width: 4px;
-    border-color: rgb(0, 0, 0);
+    border-color: rgb(255, 213, 0);
     border-style: solid;
     margin-left: -150px;
     margin-top: 180px;
 
 }
+.column2 h2{
+    color: rgb(255, 213, 0);
+}
+.media img {
+    list-style-type: none;
+    font-size: 20px;
+    width: 40px;
+    margin-top: 50px;
+    background-color: rgb(0, 0, 0);
+    padding-left: 20px;
+    }
 
+.media img:hover {
+        transform: scale(1.3);
+    }
 /*portfolio page*/
 
 .faceimg img{
@@ -341,7 +359,7 @@ footer h2{
 }
 .content4{
     flex: 20%;
-    background-color: rgb(216, 226, 105);
+    background-color: rgb(170, 169, 165);
     width: 100%;
     height: auto;
     border-width: 2px;
