--- a/css/main.css
+++ b/css/main.css
@@ -438,3 +438,38 @@ footer h2{
 .column5 li{
     list-style: none;
 }
+
+
+/*site report page*/
+
+.content22 {
+    display: flex;
+    border-style: double;
+    background-color: #959393;
+
+  }
+  
+.column22 {
+    flex: 60%;
+    padding: 30px;
+    height: 100%;
+    margin: 30px;
+    background-color: #8a8787;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-top: #000000;
+}
+.column23{
+    flex: 40%;
+    background-color: rgb(170, 169, 165);
+    width: 100%;
+    height: auto;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+}
+.content25{
+    background-color: #0008ff;
+    height: 300px;
+}
+
