portfolio page css

--- a/css/main.css
+++ b/css/main.css
@@ -318,44 +318,170 @@ footer h2{
     }
 /*portfolio page*/
 
+
+.part1 {
+    display: flex;
+    border-style: double;
+    background-color: #000000;
+    padding: 10px;
+}
+.part1r{
+    flex: 40%;
+    padding: 30px;
+    height: auto;
+    width: 100%;
+    margin: 30px;
+    background-color: #000000;
+   
+
+}
+.part1l {
+    flex: 60%;
+    padding: 20px;
+    height: 100px;
+    width: 100%;
+    margin: 30px;
+    background-color: #000000;
+}
+.part1l h1{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 50px;
+
+}
+.part1 p{
+    font-weight: lighter;
+    color: rgb(244, 221, 16);
+    font-size: 20px;
+    text-align: center;
+    padding-top: 20px;
+}
 .faceimg img{
     width: 200px;
     height: auto;
-    float: right;
-    border: #000000;
+    border: #fc0000;
     border-style: solid;
     border-width: 3px;
     border-radius: 3px;
     background-color: #000000
-}
-.faceimg{
-    margin: 10px;
-    margin-top: -250px;
-    padding-right: 20px;
-    
-}
-.content2{
-    padding-top: 300px;
-    background-color: #000000;
 
 }
+.topic1 h3{
+        color: rgb(0, 0, 0);
+        text-align: center;
+        font-size: 35px;
+        font-weight: bold;
+        background-color: #ffffff;
+        text-decoration: underline;
+        word-spacing: 2px;
+}
+.part2{
+    display: flex;
+    background-color: #4f4f4f;
+    padding: 10px;
+}
+
+
+.part2a{
+    flex: 20%;
+    border-style: double;
+    background-color: #000000;
+    padding: 10px;
+    
+}
+.part2ab {
+    background-color:rgb(255, 213, 0);
+    border-style: solid;
+    border-color: white;
+    border-width: 3px;
+    border-radius: 5px;
+    height: auto;
+    margin: 20px;
+    text-align: center;
+    
+
+}
+.part2ab:hover{
+    transform: scale(1.3);
+}
+.part2ab h2{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+
+}
+.part2ab img{
+    width: 100px;
+    height: auto;
+    border: #000000;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 3px;
+    
+
+}
+.part2ab h4{
+    color: rgb(255, 0, 0);
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    margin: 5px;
+}
+.part3{
+    display: flex;
+    background-color: #6e6a6a;
+    border-color: #000000;
+    border-width: 20px;
+    border-radius: 100px;
+    margin: 10px;
+    padding: 30px;
+    
+}
+.part3l{
+    flex: 35%;
+    padding: 10px;
+}
+.part3l{
+    color: rgb(255, 213, 0);
+    padding: 30px;
+}
+
+.part3r{
+    flex: 65%;
+    padding: 10px;
+    
+}
+.part3r ul li{
+    list-style: none;
+}
+.part3r ul li h1{
+    font-size:20px ;
+    color: rgb(244, 230, 211);
+    padding: 5px;
+}
+
 /*blog page*/
 .contents {
     display: flex;
     border-style: double;
     background-color: #959393;
+    padding: 10px;
 
   }
   
 .content3 {
-    flex: 80%;
-    padding: 30px;
+    flex: 70%;
+    padding: 45px;
     height: 100%;
-    margin: 30px;
+    margin: 40px;
     background-color: #8a8787;
     border-width: 4px;
     border-color: rgb(0, 0, 0);
     border-top: #000000;
+    border-radius: 20px;
 }
 .content4{
     flex: 20%;
@@ -382,13 +508,13 @@ footer h2{
 .column3 h2{
     font-weight: bold;
     color: rgb(111, 78, 1);
-    font-size: 40px;
+    font-size: 36px;
 
 }
 .column3 h3{
     font-weight: lighter;
     color: rgb(0, 57, 113);
-    font-size: 20px;
+    font-size: 18px;
     margin-top: -10px;
     
 
@@ -396,7 +522,7 @@ footer h2{
 .column3 h4{
     font-weight: lighter;
     color: rgb(255, 0, 0);
-    font-size: 20px;
+    font-size: 15px;
     margin-top: -10px;
     
 
@@ -404,7 +530,7 @@ footer h2{
 .column3 p{
     
     color: rgb(0, 0, 0);
-    font-size: 25px;
+    font-size: 20px;
     text-align: justify;
     
 }
@@ -418,7 +544,7 @@ footer h2{
     align-items: center;
 }
 .column5 h2{
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     color: #0008ff;
     text-align: center;
@@ -426,7 +552,7 @@ footer h2{
 
 }
 .column5 h1{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     color: #000000;
     margin-bottom: 20px;
