--- a/css/main.css
+++ b/css/main.css
@@ -568,13 +568,44 @@ footer h2{
 
 /*site report page*/
 
-.content22 {
+.layout1{
+    background-color: #000000;
+    width: fit-content;
+   
+}
+.content25 {
     display: flex;
-    border-style: double;
     background-color: #959393;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 0px
 
   }
-  
+.content25{
+    background-color: #b1b1b8;
+    height: auto;
+    padding: 20px;
+}
+.column25 p{
+    color: rgb(73, 63, 63);
+    font-size: 20px;
+    text-align: justify;
+}
+.column25 h1{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    text-align: center;
+}
+
+.content22 {
+    display: flex;
+    background-color: #000000;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 50px;
+}
 .column22 {
     flex: 60%;
     padding: 30px;
@@ -593,9 +624,86 @@ footer h2{
     border-width: 2px;
     border-color: rgb(0, 0, 0);
     border-style: solid;
-}
-.content25{
-    background-color: #0008ff;
-    height: 300px;
+    text-align: center;
+    padding: 30px;
 }
 
+.column23 img{
+    width:  200px;
+    height: auto;
+    padding-top: 10px;
+
+}
+ 
+.content22 {
+    display: flex;
+    background-color: #000000;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 50px;
+}
+.column22 {
+    flex: 60%;
+    padding: 30px;
+    height: 100%;
+    margin: 30px;
+    background-color: #8a8787;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-top: #000000;
+}
+.column23{
+    flex: 40%;
+    background-color: rgb(170, 169, 165);
+    width: 100%;
+    height: auto;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    text-align: center;
+    padding: 30px;
+}
+
+.column23 img{
+    width:  200px;
+    height: auto;
+    padding-top: 10px;
+
+}
+.content44{
+    display: flex;
+    background-color: #b1b1b8;
+    padding: 25px;
+
+}
+.column44{
+flex: 60%;
+padding: 15px;
+border-style: solid;
+border-radius: 5px;
+border-color: #000000;
+border-width: 3px;
+margin-top: -20px;
+
+}
+.column44 h1{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    text-align: center;
+}
+.column44 p{
+    color: rgb(73, 63, 63);
+    font-size: 20px;
+    text-align: justify;
+}
+.column45{
+    flex: 40%;
+    padding: 20px;
+
+}
+.column45 img{
+    width:  250px;
+    height: auto;
+    padding: 30px;
+}
