--- a/css/mobile.css
+++ b/css/mobile.css
@@ -119,7 +119,7 @@ footer h2{
 }
   
 .topnav{
-      background-color: black;
+      background-color: rgb(0, 0, 0);
       padding: 10px;
       height: 75px;
       overflow: hidden;/* to make the nav bar stay while*/
@@ -373,7 +373,7 @@ footer h2{
 }
 .socialmedia{
     background-color: rgb(255, 217, 0);
-    border: rgb(255, 217, 0);
+    border: rgb(255, 219, 14);
     border-style: double;
     border-radius: 25px;
     padding: 10px;
@@ -468,7 +468,7 @@ padding-left: 20px;
     background-color: #000000;
 }
 .part1l h1{
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     font-size: 30px;
     font-weight: bold;
@@ -518,7 +518,7 @@ padding-left: 20px;
 .part2ab {
     background-color:rgb(255, 213, 0);
     border-style: solid;
-    border-color: white;
+    border-color: rgb(255, 255, 255);
     border-width: 3px;
     border-radius: 5px;
     height: auto;
@@ -586,4 +586,93 @@ padding-left: 20px;
     font-size:20px ;
     color: rgb(244, 230, 211);
     padding: 5px;
+}
+/*site report*/
+
+.layout1{
+    background-color: #000000;
+
+    padding: 20px;
+   
+}
+.content25 {
+    display: contents;
+    padding: 30px;
+}
+.column25 p{
+    color: rgb(213, 210, 210);
+    font-size: 20px;
+    text-align: justify;
+}
+.column25 h1{
+    color: rgb(93, 215, 255);
+    font-size: 20px;
+    text-align: center;
+}
+
+.content22 {
+    display: contents;
+    background-color: #000000;
+    border-width: 4px;
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 50px;
+}
+.column22 {
+    padding: 30px;
+    height: 100%;
+    margin: 30px;
+    background-color: #8a8787;
+   
+}
+.column22 h2{
+    color: rgb(245, 221, 165);
+}
+.column22 p{
+    color: rgb(11, 11, 11);
+}
+.column23{
+    background-color: rgb(170, 169, 165);
+    width: 100%;
+    height: auto;
+    text-align: center;
+    padding: 10px;
+}
+
+.column23 img{
+    width:  auto;
+    height: 200px;
+    padding-top: 10px;
+
+
+}
+.content44{
+    display: contents;
+    background-color: #b1b1b8;
+    padding: 10px;
+
+}
+.column44{
+padding: 10px;
+
+}
+.column44 h1{
+    color: rgb(93, 215, 255);
+    font-size: 20px;
+    text-align: center;
+}
+.column44 p{
+    color: rgb(213, 210, 210);
+    font-size: 20px;
+    text-align: justify;
+}
+.column45{
+    padding: 20px;
+    text-align: center;
+
+}
+.column45 img{
+    width:  auto;
+    height: 200px;
+    padding: 50px;
 }
